fix: fix white space while loading

--- a/src/components/board-page/board-page.css
+++ b/src/components/board-page/board-page.css
@@ -92,3 +92,6 @@ button:hover{
   justify-content: space-between;
 
 }
+.loading{
+  height: 400px;
+}
